changed build.xml to have lowercase j in jars

--- a/build.xml
+++ b/build.xml
@@ -78,7 +78,7 @@
 		<fileset dir="${res.dir}"/>  
 		</copy>
 		<copy todir="${build.dir}">  
-		<fileset dir="${lib.dir}/Jars">  
+		<fileset dir="${lib.dir}/jars">  
 		<exclude name="servlet-api.jar"/>  
 		</fileset>  
 		</copy>
